# useless-pkg

./: README.md  setup.cfg  setup.py
useless-pkg/text/: palindrome.py
