[metadata]
name = useless-pkg
version = 0.0.1
author = muhammadzaki693
author_email = rzaki9359
description = just a useless
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muhammadzaki693/useless-pkg
project_urls =
    Bug Tracker = https://github.com/muhammadzaki693/useless-pkg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src